Give Java 9+ back an extendable application class path
The previous attempt ran the launch inside a URLClassLoader of its own so
that launchwrapper, FML and Mixin would each find what they assume. It
got the GTNH pack past Mixin and into the next failure - FML's Loader
defined by that loader instead of the LaunchClassLoader, so
ModClassLoader's cast fails - which is what building a different
arrangement and teaching the stack about it looks like.

With launchwrapper's own source to read, there is a better answer:
restore the property Java 8 has instead of working around its absence.
The application class loader on Java 9+ is not a URLClassLoader, but it
is still extendable - it is what Instrumentation.appendToSystemClassLoaderSearch
drives, and the method behind it, ClassLoaders$AppClassLoader
.appendToClassPathForInstrumentation, can be called directly. FML now
calls that where it reflected URLClassLoader.addURL, and the coremod jar
lands on the real application class path, loaded by the same loader as
everything else - exactly the Java 8 outcome. There is a fallback through
BuiltinClassLoader's own search path, and if neither works it says so
once, naming the --add-opens it needs, instead of failing per coremod.

Verified on a JDK 21 here rather than assumed: the method is there, the
call succeeds under --add-opens java.base/jdk.internal.loader=ALL-UNNAMED,
and a class from the appended jar comes back defined by the application
class loader.

So the boot loader is gone again and the launch is stock in shape: the
LaunchClassLoader still delegates its excluded packages to the
application class loader, which is the loader FML extends and the one
Mixin checks its tweaker against. What is kept from that attempt is
reading the class path the way launchwrapper does on Java 8 - the jar
manifests' Class-Path chained in, not just the command line, which is how
the server jar reaches libraries/.

The generated start scripts and the CI modpack job now pass
--add-opens java.ba